--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'normalize-scss';
+
+@import './styles/global/_fonts'; 
+@import './styles/global/_vars';
+@import './styles/global/_global';
+@import './styles/global/_overall';
