--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,9 @@
 @use '../../styles/global/_mixins' as mixins;
 
 .header {
-	position: absolute;
+	
 	width: 100%;
-	padding: 30px 0;
+	padding: 1.8rem 0;
 
 	&__icon {
 		overflow: visible;
