--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,7 +6,8 @@
 	padding: 1.8rem 0;
 
 	&__icon {
-		overflow: visible;
+		width: auto;
+		height: auto;
 	}
 
 	&__label {
@@ -23,8 +24,8 @@
 		padding: 0.6rem 0.4rem;
 		
 		@include mixins.for-phone {    
-	   	display: none;
-	  }
+	   		display: none;
+	 	}
 	}
 
 	&__cart {
