--- a/src/styles/global/_overall.scss
+++ b/src/styles/global/_overall.scss
@@ -46,3 +46,10 @@
 }
 
 .bg-shadow { box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7); }
+
+.main-title {
+	text-transform: uppercase;
+	font-size: 2rem;
+	letter-spacing: 7px;
+	text-align: center;
+}
