--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -5,7 +5,7 @@
 	
 	&__container {
 		height: 100%;
-		padding: 5rem 0;
+		padding: 8rem 0;
 	}
 
 	&__title {
@@ -31,6 +31,13 @@
 		@include mixins.for-phone {    
 	   		width: 100%;
 	 	}
+	}
+
+	&-overlay {
+		height: 80vh;
+		background-position: top;
+		background-attachment: fixed;
+		background-image: url('../../assets/images/about-overlay.jpeg');
 	}
 }
 
