--- a/src/styles/global/_overall.scss
+++ b/src/styles/global/_overall.scss
@@ -11,6 +11,7 @@
 .white    	  { color: var(--color-white); }
 .black 		  { color: var(--color-black); }
 .yellow-metal { color: var(--color-yellow-metal); }
+.fantasy      { color: var(--color-fantasy); }
 
 .light       { font-weight: 300; }
 .regular     { font-weight: 400; }
@@ -25,7 +26,7 @@
 .flex-wrap     { flex-wrap: wrap; }
 .items-center  { align-items: center; }
 .flex-start    { justify-content: flex-start; }
-.flex-end    { justify-content: flex-end; }
+.flex-end      { justify-content: flex-end; }
 .flex-center   { justify-content: center; }
 .space-between { justify-content: space-between; }
 
@@ -52,4 +53,11 @@
 	font-size: 2rem;
 	letter-spacing: 7px;
 	text-align: center;
+}
+
+.main-button {
+	padding: 0.8rem;
+	font-weight: 300;
+	color: var(--color-white);
+	background-color: var(--color-yellow-metal);
 }
