--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <app-header></app-header>
   <main class="main">
     <app-hero></app-hero>
+    <app-shop></app-shop>
     <app-about></app-about>
     <app-contact></app-contact>
   </main>
