--- a/src/styles/global/_overall.scss
+++ b/src/styles/global/_overall.scss
@@ -12,6 +12,7 @@
 .black 		  { color: var(--color-black); }
 .yellow-metal { color: var(--color-yellow-metal); }
 .fantasy      { color: var(--color-fantasy); }
+.tuatara      { color: var(--color-tuatara); }
 
 .light       { font-weight: 300; }
 .regular     { font-weight: 400; }
