--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -3,15 +3,33 @@
 		<h2 class="shop__title main-title yellow-metal">Shop</h2>
 
 		<ul class="shop__products products flex space-between flex-wrap">
-			<li class="products__item"></li>
-			<li class="products__item"></li>
-			<li class="products__item"></li>
-			<li class="products__item"></li>
-			<li class="products__item"></li>
-			<li class="products__item"></li>
-			<li class="products__item"></li>
-			<li class="products__item"></li>
-			<li class="products__item"></li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
+			<li class="products__item">
+				<app-shop-product></app-shop-product>
+			</li>
 		</ul>
 	</div>
 </section>
