--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <main class="main">
     <app-hero></app-hero>
     <app-shop></app-shop>
+    <app-product></app-product>
     <app-about></app-about>
     <app-contact></app-contact>
   </main>
