--- a/src/styles/global/_overall.scss
+++ b/src/styles/global/_overall.scss
@@ -62,3 +62,11 @@
 	color: var(--color-white);
 	background-color: var(--color-yellow-metal);
 }
+
+.window-container {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	background-color: var(--color-white);
+}
