--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,7 +1,11 @@
 <section class="cart">
 	<div class="cart-overlay"></div>
 	<div class="cart__container window-container flex flex-column flex-wrap yellow-metal">
-		<button class="cart__close-button btn-reset black">
+		<button 
+			class="cart__close-button btn-reset black"
+			aria-label="Close"
+			routerLink="root"
+		>
 			<mat-icon class="cart__icon">close</mat-icon>
 		</button>
 
