--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <app-shop></app-shop>
     <app-about></app-about>
     <app-contact></app-contact>
+    <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
 </div>
