--- a/src/app/shop/shop-product/shop-product.component.html
+++ b/src/app/shop/shop-product/shop-product.component.html
@@ -1,6 +1,6 @@
 <div class="shop-product flex flex-column items-center">
     <img 
-    	src="../../../assets/images/product-image-1m.jpeg" 
+    	src="{{ product.images[0] }}" 
     	alt="product image"
     	class="shop-product__image"
     >
