--- a/src/app/product/product-slider/product-slider.component.html
+++ b/src/app/product/product-slider/product-slider.component.html
@@ -1,11 +1,12 @@
 <swiper
 	[slidesPerView]="1"
 	class="product-slider"
+	[thumbs]="{ swiper: thumbsSwiper }"
 >
-	<ng-template swiperSlide>
+	<ng-template swiperSlide *ngFor="let image of images">
 		<img 
-		   	src="../../../assets/images/product-image-1m.jpeg" 
-		   	alt="product image"
+		   	src="{{ image }}" 
+		   	alt="product"
 		  	class="shop-product__image"
 		>
 	</ng-template>
@@ -18,10 +19,10 @@
 	[watchSlidesProgress]="true"
 	class="product-thumbs-slider"
 >
-   	<ng-template swiperSlide>
+   	<ng-template swiperSlide *ngFor="let image of images">
 		<img 
-		   	src="../../../assets/images/product-image-1m.jpeg" 
-		   	alt="product image"
+		   	src="{{ image }}" 
+		   	alt="product thumb"
 		  	class="shop-product__image"
 		>
 	</ng-template>
