--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -13,7 +13,22 @@
 
 		<ul class="cart__products products">
 			<li class="products__item">
-				
+				<app-cart-product></app-cart-product>
+			</li>
+			<li class="products__item">
+				<app-cart-product></app-cart-product>
+			</li>
+			<li class="products__item">
+				<app-cart-product></app-cart-product>
+			</li>
+			<li class="products__item">
+				<app-cart-product></app-cart-product>
+			</li>
+			<li class="products__item">
+				<app-cart-product></app-cart-product>
+			</li>
+			<li class="products__item">
+				<app-cart-product></app-cart-product>
 			</li>
 		</ul>
 
