--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,56 +10,9 @@
 		height: auto;
 	}
 
-	&__label {
-		width: 18%;
-		height: 2.2rem;
-
-		&:hover {
-	  	border: 1px solid var(--color-yellow-metal);
-	  }
+	&__logo {
+		height: 2.4rem;
 	}
-
-	&__search {
-		width: 80%;
-		padding: 0.6rem 0.4rem;
-		
-		@include mixins.for-phone {    
-	   		display: none;
-	 	}
-	}
-
-	&__cart {
-		margin-left: 10%;
-
-		@include mixins.for-phone {    
-	   	display: none;
-	  }
-	}
-
-	&__menu {
-		display: none;
-
-		@include mixins.for-phone {    
-	   	display: block;
-	  }
-	}
-}
-
-.nav {
-		width: 35%;
-		font-size: 1.2rem;
-
-		@include mixins.for-phone {    
-	   	display: none;
-	  }
-
-	  &__item {
-	  	transition: transform 0.2s;
-
-	  	&:hover {
-		  	transform: scale(1.2);
-		  }
-	  }
 }
 
 .header-cart {
