--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,11 @@
 				</button>
 			</li>
 			<li class="header__button">
-				<button class="header__search-button btn-reset yellow-metal" aria-label="Search">
+				<button 
+					class="header__search-button btn-reset yellow-metal" 
+					aria-label="Search"
+					routerLink="search"
+				>
 					<mat-icon class="header__icon">search</mat-icon>
 				</button>
 			</li>
