--- a/src/styles/global/_overall.scss
+++ b/src/styles/global/_overall.scss
@@ -35,6 +35,8 @@
 
 .transparent { background-color: transparent; }
 
+.not-visible { visibility: hidden; }
+
 .btn-reset {
 	border: none;
 	background-color: transparent;
