--- a/src/app/shop/shop.component.scss
+++ b/src/app/shop/shop.component.scss
@@ -14,6 +14,17 @@
 		width: 85%;
 		margin: 0 auto;
 	}	
+
+	&__notification-button {
+		position: fixed;
+		left: 50%;
+		transform: translateX(-50%);
+		padding: 1rem 4rem;
+		border-radius: 25px;
+		border: 1px solid var(--color-fantasy);
+		background-color: var(--color-yellow-metal);
+		z-index: 10;
+	}
 }
 
 .products {
